NConnectedMirrorNode rewrite addNodesToStructure